# engram

./: .gitignore  LICENSE  README.ja.md  README.md  install.ps1  install.sh  pyproject.toml
.github/workflows/: test.yml
scripts/: check_associative.py  check_mcp_e2e.py  simulate.py
src/engram/: __init__.py  cli.py  config.py  db.py  dynamics.py  embedder.py  engine.py  hooks.py  models.py  onnx_export.py  perf.py  server.py  setup.py  store.py  surface.py  transcript.py
src/engram/templates/: MEMORY_PROTOCOL.md  ONBOARDING.md
tests/: test_config.py  test_db.py  test_dynamics.py  test_embedder_onnx.py  test_engine.py  test_hooks.py  test_integration.py  test_perf.py  test_preload.py  test_room.py  test_server_startup.py  test_setup.py  test_store.py  test_surface.py  test_transcript.py
