[project]
name = "engram"
version = "0.3.0"
description = "Human-like memory MCP server for AI agents: activation decay, associative recall, error-driven encoding"
requires-python = ">=3.12"
# 配布時のつまずきを減らすため、埋め込みモデルの実行系も既定の依存に含める
dependencies = [
    "mcp>=1.2",
    "sqlite-vec>=0.1.6",
    "numpy>=1.26",
    "python-frontmatter>=1.1",
    "python-ulid>=2.7",
    "sentence-transformers>=3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
engram = "engram.cli:main"
engram-mcp = "engram.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/engram"]

[tool.pytest.ini_options]
testpaths = ["tests"]
